objects/SBQQ__QuoteTemplate__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteTemplateHelp</customHelpPage>
    <description>Template that controls formatting of generated PDF documents.</description>
    <fields>
        <fullName>SBQQ__AllPackageProductsShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether all package products are printed on quote documents or only ones that are non-zero.</description>
        <inlineHelpText>Select the checkbox if all package products should be printed on quote documents; otherwise, only ones that are non-zero are printed.</inlineHelpText>
        <label>Show All Package Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillToTitle__c</fullName>
        <defaultValue>&apos;Bill To&apos;</defaultValue>
        <description>Title used for Bill To section. Default value is &quot;Bill To&quot;.</description>
        <inlineHelpText>Title used for Bill To section. Default value is &quot;Bill To&quot;.</inlineHelpText>
        <label>Bill To Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BorderColor__c</fullName>
        <defaultValue>&quot;000000&quot;</defaultValue>
        <description>Color of table borders expressed as a hexadecimal value.</description>
        <inlineHelpText>Color of table borders expressed as a hexadecimal value.</inlineHelpText>
        <label>Border Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BottomMargin__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Bottom margin on the page.</description>
        <inlineHelpText>Bottom margin on the page.</inlineHelpText>
        <label>Bottom Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledProductsShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if quote line items with the Bundled checkbox selected are displayed on quote documents generated from this template.</description>
        <inlineHelpText>Select the checkbox if quote line items with Bundled enabled are displayed on quote documents generated from this template.</inlineHelpText>
        <label>Show Bundled Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyCity__c</fullName>
        <description>City portion of company address displayed on quote documents.</description>
        <inlineHelpText>City portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyCountry__c</fullName>
        <description>Country portion of company address displayed on quote documents.</description>
        <inlineHelpText>Country portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyEmail__c</fullName>
        <description>Company email displayed on quote documents. Eg: sales@mycompany.com</description>
        <inlineHelpText>Company email displayed on quote documents. Eg: sales@mycompany.com</inlineHelpText>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyFax__c</fullName>
        <description>Company FAX displayed on quote documents.</description>
        <inlineHelpText>Company FAX displayed on quote documents.</inlineHelpText>
        <label>Company Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyName__c</fullName>
        <description>Name of the company as displayed on quote documents.</description>
        <inlineHelpText>Name of the company as displayed on quote documents.</inlineHelpText>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyPhone__c</fullName>
        <description>Company phone displayed on quote documents.</description>
        <inlineHelpText>Company phone displayed on quote documents.</inlineHelpText>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyPostalCode__c</fullName>
        <description>Postal code portion of company address displayed on quote documents.</description>
        <inlineHelpText>Postal code portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanySlogan__c</fullName>
        <description>Company slogan displayed on quote documents.</description>
        <inlineHelpText>Company slogan displayed on quote documents.</inlineHelpText>
        <label>Company Slogan</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyState__c</fullName>
        <description>State portion of company address displayed on quote documents.</description>
        <inlineHelpText>State portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompanyStreet__c</fullName>
        <description>Street portion of company address displayed on quote documents.</description>
        <inlineHelpText>Street portion of company address displayed on quote documents.</inlineHelpText>
        <label>Company Street</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentProductsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether component products are printed on quote documents, as indicated by the Component checkbox on the product</description>
        <inlineHelpText>Select the checkbox if component products with the Component enabled should not be printed on quote documents.</inlineHelpText>
        <label>Hide Component Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscountField__c</fullName>
        <description>Field on the Quote object that computes the customer discount.</description>
        <inlineHelpText>Quote Line field used to calculate a discount. The value from this field is subtracted from the total price.</inlineHelpText>
        <label>Customer Discount Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Total Discount (Amt)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscountLabel__c</fullName>
        <defaultValue>&quot;DISCOUNT&quot;</defaultValue>
        <description>Label used for customer discount in subtotals and totals sections.</description>
        <inlineHelpText>Label used for customer discount in subtotals and totals sections.</inlineHelpText>
        <label>Customer Discount Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscountShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if quote-level customer discount is displayed in the quote totals.</description>
        <inlineHelpText>Select the checkbox if you want quote-level customer discount displayed in the quote totals.</inlineHelpText>
        <label>Show Customer Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that marks the template as default, when selected.</description>
        <inlineHelpText>Select this checkbox to mark this template as default.</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__DeploymentStatus__c</fullName>
        <description>Deployment status of this template. &quot;In Development&quot; templates are only visible to users with Customize Application permission.</description>
        <inlineHelpText>Deployment status of this template. Change to &quot;Deployed&quot; to make this template visible to non-admin users.</inlineHelpText>
        <label>Deployment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Development</fullName>
                    <default>true</default>
                    <label>In Development</label>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleShown__c</fullName>
        <description>Determines if product discount schedule is displayed under the quote-lines.</description>
        <inlineHelpText>Choose how to display discount schedules on the quote document. Per Quote Line will show the discount schedule and Tiers right-aligned under each Quote Line.</inlineHelpText>
        <label>Show Discount Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Quote Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludeHeaderFooter__c</fullName>
        <description>Excludes template header and footer for First Page, Last Page, or both the First and Last Page.</description>
        <inlineHelpText>Excludes template header and footer for First Page, Last Page, or both the First and Last Page.</inlineHelpText>
        <label>Exclude Header &amp; Footer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Page</fullName>
                </value>
                <value>
                    <fullName>Last Page</fullName>
                </value>
                <value>
                    <fullName>First and Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ExcludedPages__c</fullName>
        <description>Excludes page numbering for All Pages, First Page, Second Page, and/or both the First and Second Page.</description>
        <inlineHelpText>Excludes page numbering for All Pages, First Page, Second Page, and/or both the First and Second Page.</inlineHelpText>
        <label>Exclude Page Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Pages</fullName>
                </value>
                <value>
                    <fullName>First Page</fullName>
                </value>
                <value>
                    <fullName>Last Page</fullName>
                </value>
                <value>
                    <fullName>First and Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FontFamily__c</fullName>
        <description>Family of the font that should be applied to text in this template.</description>
        <inlineHelpText>Family of the font that should be applied to text in this template.</inlineHelpText>
        <label>Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                    <default>true</default>
                    <label>Helvetica</label>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Noto Sans TC</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>Play</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Ubuntu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FontSize__c</fullName>
        <defaultValue>9</defaultValue>
        <description>Default font size for text in this quote document.</description>
        <inlineHelpText>Default font size for text in this quote document.</inlineHelpText>
        <label>Font Size</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__FooterContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template content that should be rendered in the footer.</description>
        <inlineHelpText>Template content that should be rendered in the footer.</inlineHelpText>
        <label>Footer Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Quote Templates (Footer)</relationshipLabel>
        <relationshipName>QuoteTemplatesFooter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__FooterHeight__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Height of the footer on documents generated from this template.</description>
        <inlineHelpText>Height of the footer on documents generated from this template.</inlineHelpText>
        <label>Footer Height</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__GeneratorName__c</fullName>
        <description>Name of the Visualforce page that should be used by this template to generate XSL FO tree.</description>
        <inlineHelpText>Name of the Visualforce page that should be used by this template to generate XSL FO tree.</inlineHelpText>
        <label>Generator Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GrandTotalPrefix__c</fullName>
        <description>Prefix for subtotal and total labels in grand totals.</description>
        <inlineHelpText>Prefix for subtotal and total labels in grand totals.</inlineHelpText>
        <label>Grand Total Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupField__c</fullName>
        <description>Contains the values you want to use when grouping and subtotaling line items.</description>
        <inlineHelpText>Select the field that has the values you want to use when grouping and subtotaling line items.</inlineHelpText>
        <label>Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupFontFamily__c</fullName>
        <description>Family of the font that should be applied to Group title text in this template.</description>
        <inlineHelpText>Family of the font that should be applied to Group title text in this template.</inlineHelpText>
        <label>Group Font Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courier</fullName>
                </value>
                <value>
                    <fullName>Dosis</fullName>
                </value>
                <value>
                    <fullName>Droid Sans</fullName>
                </value>
                <value>
                    <fullName>Droid Serif</fullName>
                </value>
                <value>
                    <fullName>Helvetica</fullName>
                    <default>true</default>
                    <label>Helvetica</label>
                </value>
                <value>
                    <fullName>Merriweather</fullName>
                </value>
                <value>
                    <fullName>Montserrat</fullName>
                </value>
                <value>
                    <fullName>Noto Sans JP</fullName>
                </value>
                <value>
                    <fullName>Noto Sans KR</fullName>
                </value>
                <value>
                    <fullName>Noto Sans SC</fullName>
                </value>
                <value>
                    <fullName>Noto Sans TC</fullName>
                </value>
                <value>
                    <fullName>Open Sans</fullName>
                </value>
                <value>
                    <fullName>Play</fullName>
                </value>
                <value>
                    <fullName>PT Sans</fullName>
                </value>
                <value>
                    <fullName>PT Serif</fullName>
                </value>
                <value>
                    <fullName>Roboto</fullName>
                </value>
                <value>
                    <fullName>Roboto Light</fullName>
                </value>
                <value>
                    <fullName>Times</fullName>
                </value>
                <value>
                    <fullName>Titillium Web</fullName>
                </value>
                <value>
                    <fullName>Ubuntu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupFontSize__c</fullName>
        <defaultValue>9.0</defaultValue>
        <description>Default font size for Group titles</description>
        <inlineHelpText>Default font size for Group titles</inlineHelpText>
        <label>Group Font Size</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupFontStyle__c</fullName>
        <description>Font style for Group titles. Default is normal if left blank.</description>
        <inlineHelpText>Font style for Group titles. Default is normal if left blank.</inlineHelpText>
        <label>Group Font Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Bold</fullName>
                </value>
                <value>
                    <fullName>Italic</fullName>
                </value>
                <value>
                    <fullName>Underline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupGap__c</fullName>
        <defaultValue>15</defaultValue>
        <description>Gap between groups in pixels.</description>
        <inlineHelpText>Gap between groups in pixels.</inlineHelpText>
        <label>Group Gap (px)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupShadingColor__c</fullName>
        <defaultValue>&apos;FFFFFF&apos;</defaultValue>
        <description>Color of the shading for table cells that contain group title and description.</description>
        <inlineHelpText>Color of the shading for table cells that contain group title and description.</inlineHelpText>
        <label>Group Shading Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__GroupTextAlignment__c</fullName>
        <description>Specifies the alignment of Group title and Group Description. Defaults to Left if left blank.</description>
        <inlineHelpText>Specifies the alignment of Group title and Group Description. Defaults to Left if left blank.</inlineHelpText>
        <label>Group Text Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Left</fullName>
                    <default>true</default>
                    <label>Left</label>
                </value>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__GroupTextColor__c</fullName>
        <defaultValue>&apos;000000&apos;</defaultValue>
        <description>Color for the group title and description text.</description>
        <inlineHelpText>Color for the group title and description text.</inlineHelpText>
        <label>Group Text Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderContent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References template content that should be rendered in the header.</description>
        <inlineHelpText>References template content that should be rendered in the header.</inlineHelpText>
        <label>Header Content</label>
        <referenceTo>SBQQ__TemplateContent__c</referenceTo>
        <relationshipLabel>Quote Templates (Header)</relationshipLabel>
        <relationshipName>QuoteTemplatesHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__HeaderHeight__c</fullName>
        <description>Height of the header on documents generated from this template.</description>
        <inlineHelpText>Height of the header on documents generated from this template.</inlineHelpText>
        <label>Header Height</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__HideGroupSubtotals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hides group subtotals on documents generated from this template.</description>
        <inlineHelpText>Select the checkbox if you want to hide group subtotals on documents generated from this template.</inlineHelpText>
        <label>Hide Group Subtotals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__IntroductionTitle__c</fullName>
        <description>Title of the section displayed on the Introduction field.</description>
        <inlineHelpText>Title of the section displayed on the Introduction field. To display no title, leave this field blank.</inlineHelpText>
        <label>Introduction Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__LeftMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Left margin on the page.</description>
        <inlineHelpText>Left margin on the page.</inlineHelpText>
        <label>Left Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineNumbering__c</fullName>
        <description>Specifies how line items are numbered on generated document.</description>
        <inlineHelpText>Specify how to number line items on generated documents. &quot;Start at quote&quot; numbers all lines sequentially across groups (if any). &quot;Start at group&quot; resets numbers within each group.</inlineHelpText>
        <label>Line Numbering</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Start at quote</fullName>
                    <default>true</default>
                    <label>Start at quote</label>
                </value>
                <value>
                    <fullName>Start at group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__LineSortField__c</fullName>
        <description>Field on Quote Line used to sort line items on document generated by this template.</description>
        <inlineHelpText>Specify the field used in sorting line items on the document.</inlineHelpText>
        <label>Line Sort Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__LogoDocumentId__c</fullName>
        <description>ID of the Document which conatins logo image for use in quote PDF.</description>
        <inlineHelpText>Salesforce ID for the document containing the logo image used in the quote PDF.</inlineHelpText>
        <label>Logo Document Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__NotesTitle__c</fullName>
        <description>Title of the section that displays the Notes field.</description>
        <inlineHelpText>Title of the section that displays the Notes field. To display no title, leave this field blank.</inlineHelpText>
        <label>Notes Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PageHeight__c</fullName>
        <defaultValue>11</defaultValue>
        <description>Page height in inches.</description>
        <inlineHelpText>Page height in inches.</inlineHelpText>
        <label>Page Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PageNumberAlignment__c</fullName>
        <description>Specifies the page number alignment for the document.</description>
        <inlineHelpText>Specify the page number alignment for the document. Defaults to Center if the field is blank.</inlineHelpText>
        <label>Page Number Alignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Center</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PageNumberPosition__c</fullName>
        <description>Specifies where the page numbers are displayed in the document.</description>
        <inlineHelpText>Specify where the page numbers are displayed in the document. Defaults to Footer if the field is blank.</inlineHelpText>
        <label>Page Number Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Footer</fullName>
                    <default>true</default>
                    <label>Footer</label>
                </value>
                <value>
                    <fullName>Header</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PageNumberText__c</fullName>
        <defaultValue>&quot;Page {0} of {1}&quot;</defaultValue>
        <description>Declares the text description of the page number.</description>
        <inlineHelpText>Declare the text description of the page number. &quot;{0}&quot; independently represents the current page. &quot;{1}&quot; is dependent of &quot;{0}&quot; and it represents the total pages with page numbers. Defaults to &quot;Page {0} of {1}&quot; if the field is blank.</inlineHelpText>
        <label>Page Number Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PageOrientation__c</fullName>
        <description>Page orientation of PDF documents generated with this template.</description>
        <inlineHelpText>Page orientation of PDF documents generated with this template.</inlineHelpText>
        <label>Page Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Portrait</fullName>
                    <default>true</default>
                    <label>Portrait</label>
                </value>
                <value>
                    <fullName>Landscape</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PageWidth__c</fullName>
        <defaultValue>8.5</defaultValue>
        <description>Page width in inches.</description>
        <inlineHelpText>Page width in inches.</inlineHelpText>
        <label>Page Width</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscountLabel__c</fullName>
        <defaultValue>&quot;PARTNER DISCOUNT&quot;</defaultValue>
        <description>Label used for partner discount in subtotals and totals sections.</description>
        <inlineHelpText>Label used for partner discount in subtotals and totals sections.</inlineHelpText>
        <label>Partner Discount Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PartnerDiscountShown__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the quote-level partner discount is displayed in the quote totals.</description>
        <inlineHelpText>Select the checkbox if you want quote-level partner discount displayed in the quote totals.</inlineHelpText>
        <label>Show Partner Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedProductsShown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if renewed products are shown on Renewal quotes generated from this template.</description>
        <inlineHelpText>Select the checkbox if renewed products should be shown on Renewal quotes generated from this template.</inlineHelpText>
        <label>Show Renewed Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RightMargin__c</fullName>
        <defaultValue>0.5</defaultValue>
        <description>Right margin on the page.</description>
        <inlineHelpText>Right margin setting on the page.</inlineHelpText>
        <label>Right Margin</label>
        <precision>6</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RollUpField__c</fullName>
        <description>Field on quote line object that&apos;s used to rollup lines.</description>
        <inlineHelpText>Quote line field used for roll-up. All lines where this field returns the same value will be rolled up into the first line where the value occurs.</inlineHelpText>
        <label>Roll-Up Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ShadingColor__c</fullName>
        <defaultValue>&quot;FFFFFF&quot;</defaultValue>
        <description>Color of shading in column headers expressed as a hexadecimal.</description>
        <inlineHelpText>Color of shading in column headers expressed as a hexadecimal.</inlineHelpText>
        <label>Shading Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__ShipToTitle__c</fullName>
        <defaultValue>&apos;Ship To&apos;</defaultValue>
        <description>Label used for &quot;Ship To&quot; section. Default value is &quot;Ship To&quot;.</description>
        <inlineHelpText>Label used for &quot;Ship To&quot; section. Default value is &quot;Ship To&quot;.</inlineHelpText>
        <label>Ship To Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__SubGroupField__c</fullName>
        <description>Field used to sub group line items.</description>
        <inlineHelpText>Field used to sub group line items.</inlineHelpText>
        <label>Sub Group Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>